# RouteMate

./: README.md
backend/: .env.example  .gitignore  AUTHENTICATION_FIX.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_SETUP_COMPLETE.md  AUTHENTICATION_WORKING.md  AUTH_QUICK_START.md  COMPLETE_SETUP_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  REPOSITORY_LAYER_ADDED.md  REPOSITORY_PATTERN.md  SETUP_GUIDE.md  SUPABASE_CONNECTION_GUIDE.md  main.py  pyproject.toml  test_auth_flow.py  test_supabase_connection.py
backend/app/: __init__.py
backend/app/api/: auth.py  health.py  router.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: supabase.py
backend/app/middleware/: cors.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py  base.py  bus_repository.py  route_repository.py  user_repository.py
backend/app/schemas/: auth.py  common.py
backend/app/services/: auth_service.py
backend/tests/: conftest.py  test_health.py
